- Optimise TAG cloud creation (speed) - Add "-" char inside TAG words (now CVE looks better ;-) - Better split when creating TAG words (now splitting on white space chars) - Fixed TAG word creation (don't use html tags) - Fixed background color of TAG cloud on dark theme - Added new user setting: Colorful tag cloud - small GUI changes on Dashbord screen - Added support for delayed setting loading (isInitializedSetting, settings-loaded) - Ruff precomit checks

--- a/src/gui/src/assets/centralize.css
+++ b/src/gui/src/assets/centralize.css
@@ -138,13 +138,8 @@ div.v-data-table > header {
 }
 
 /* --- DashboardView.vue --- */
-.v-sheet--offset {
-    top: -8px;
-    position: relative;
-}
-
 .wordCloud {
-    height: 200px;
+    height: 430px !important;
 }
 
 .v-card .v-btn.next {
